--- a/demo/Jenkinsfile
+++ b/demo/Jenkinsfile
@@ -1,41 +1,31 @@
 pipeline {
-     agent any
+    agent any
 
-    tools {
-        // Specify the Maven installation
-        maven 'Maven'
-    }
     stages {
-        stage('Checkout') {
+        stage('Build') {
             steps {
-                // Checkout source code from GitHub repository
-                git branch: 'main', credentialsId: '479a7451-9583-4262-b166-f2793f53a438', url: 'https://github.com/vk23191/JenkinsTestingSpringBoot.git'
-            }
-        }
-
-        stage('Build and Test') {
-            steps {
-                dir('demo') {
-                    // Execute Maven build commands
-                    sh 'mvn clean test'
+                script {
+                    // Build Docker image and tag it
+                    docker.build("my-spring-boot-app:${env.BUILD_NUMBER}")
                 }
             }
         }
-
-        stage('Deploy to Tomcat') {
+        stage('Test') {
             steps {
-                // Deploy the WAR file to Tomcat using Tomcat Manager API
                 script {
-                    // Find WAR files in the 'target' directory
-                    def warFiles = findFiles(glob: 'my-webapp/target/*.war')
-
-                    // Check if any WAR files were found
-                    if (warFiles.isEmpty()) {
-                        error 'No WAR files found to deploy'
-                    } else {
-                        // Deploy the first WAR file to Tomcat (assuming only one WAR is generated)
-                        def warFile = warFiles[0]
-                        sh "curl -v --upload-file ${warFile} '${TOMCAT_URL}/manager/text/deploy?path=/${APP_NAME}&update=true'"
+                    // Run tests inside Docker container if needed
+                    docker.image("my-spring-boot-app:${env.BUILD_NUMBER}").withRun('-p 8080:8080') {
+                        sh 'docker exec CONTAINER_ID mvn test'
+                    }
+                }
+            }
+        }
+        stage('Deploy') {
+            steps {
+                script {
+                    // Push Docker image to Docker registry (if needed)
+                    docker.withRegistry('https://registry.example.com', 'docker-credentials-id') {
+                        docker.image("my-spring-boot-app:${env.BUILD_NUMBER}").push()
                     }
                 }
             }
@@ -44,10 +34,14 @@ pipeline {
 
     post {
         success {
-            echo 'Pipeline succeeded! This can include additional notifications or steps upon success.'
+            echo 'Build successful! Deploy your application.'
+            // Clean up Docker resources
+            docker.image("my-spring-boot-app:${env.BUILD_NUMBER}").remove()
         }
         failure {
-            echo 'Pipeline failed! This can include cleanup or notifications upon failure.'
+            echo 'Build failed! Take necessary actions.'
+            // Clean up Docker resources
+            docker.image("my-spring-boot-app:${env.BUILD_NUMBER}").remove()
         }
     }
 }
