--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -41,7 +41,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>my-spring-boot-app</finalName>
+		<finalName>my-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
